Fix the CI build
Rouge 3.4.0 has a nasty bug that breaks the html generation.
See https://github.com/asciidoctor/asciidoctor/issues/3336 for details.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Install AsciiDoctor & Rouge
           command: |
             gem install asciidoctor
-            gem install rouge
+            gem install rouge -v 3.3.0
       - run:
           name: Build Site
           command: asciidoctor -a toc="left" -a toclevels=2 README.adoc -o _build/html/index.html
